# weensy.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  cicd.yml
proc-macro/: Cargo.toml
proc-macro/src/: arg.rs  entry.rs  lib.rs
src/: init.rs  lib.rs
