[package]
name = "weensy"
description.workspace = true
version.workspace = true
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[workspace.package]
description = "A collection of useful bits and bobs for programming the Teensy 4.1 microcontroller."
version = "0.1.0"
homepage = "https://github.com/speelbarrow/weensy.rs"
repository = "https://github.com/speelbarrow/weensy.rs"
license = "GPL-3.0"
publish = false

[workspace]
members = ["proc-macro"]

[dependencies]
teensy4-bsp = "0.4.4"
embedded-hal = "0.2"
weensy-proc-macro = "0.1.0" 

[features]
default = ["t4bsp-rt"]
t4bsp-rt = ["teensy4-bsp/rt"]
t4bsp-usb-logging = ["teensy4-bsp/usb-logging"]
embd-hal-unproven = ["embedded-hal/unproven"]

[package.metadata.docs.rs]
all-features = true
