[package]
name = "weensy-proc-macro"
version.workspace = true
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["extra-traits", "full"] }

[dev-dependencies]
teensy4-bsp = { version = "0.4.4", features = ["usb-logging"] }
weensy = { path = "../", features = ["t4bsp-usb-logging"] }
